New Dijkstra lib with this version is possible to calculate 500 nodes dijkstra